safari scrolling issue v3 // added -webkit-overflow-scrolling: touch; to body styles // reenabled scroll handler

--- a/public/global.css
+++ b/public/global.css
@@ -11,7 +11,8 @@ body::-webkit-scrollbar {
   
   /* Hide scrollbar for IE, Edge and Firefox */
 body {
-	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
+	overflow: scroll;
 	-ms-overflow-style: none;  /* IE and Edge */
 	scrollbar-width: none;  /* Firefox */
 }
